<resources>
    <string name="pref_export_config">Export Config</string>
    <string name="pref_export_data">Export Data</string>
    <string name="pref_import_config">Import Config</string>
    <string name="pref_import_data">Import Data</string>
    <string name="pref_export_csv">Export Event Log (CSV)</string>
    <string name="pref_export_config_sum">Backups configuration options to SD card including excluded numbers and times</string>
    <string name="pref_export_data_sum">Backups Call and SMS event data on SD card</string>
    <string name="pref_import_config_sum">Restores configuration from SD card (latest)</string>
    <string name="pref_import_data_sum">Restores Call and SMS event data from SD card and merges with current data (latest)</string>
    <string name="pref_export_csv_sum">Export your Call and SMS event data to readable CSV file</string>
    <string name="pref_use_unicode_sms_split">Split on 80 chars (Unicode)</string>
    <string name="pref_use_unicode_sms_split_sum">Check this if your messages gets splitted after 80 characters. This for some languages with special characters.</string>
    <string name="pref_importexport">Import/Export (BETA)</string>
    <string name="units_category">SMS/Minute Exchange</string>
    <string name="pref_gui">UI settings</string>
    <string name="pref_notifications_cat">Notification Settings</string>
    <string name="pref_unit_limit">Unit Limit (SMS/Minute exchange)</string>
    <string name="pref_unit_limit_sum">Activate this if you can exchange sms against minutes and vice versa. For example 100 minutes OR 200 sms. Minute are the base which are called units. On the given limits for SMS and units (minutes) the exchange ratio will be calculated. Costs are based on this ratio, you input only unit costs if you want the costs feature. Enabling this will disable individual sms-only and calltime-only limits.</string>
    <string name="pref_units_free_sum">How many minutes you can talk. It is the base unit for that limit.</string>
    <string name="pref_units_free">Free minutes (units)</string>
    <string name="pref_units_sms_free_sum">OR how many SMS can spend in a month.</string>
    <string name="pref_units_sms_free">Free SMS</string>
    <string name="pref_costs_limit">Costs Limit</string>
    <string name="pref_costs_limit_sum">Activate if you have a (personal) cost limit which you want to monitor. If this is activated DroidStats manages the overview boxes not showing more than 3.</string>
    <string name="pref_costs_free_sum">The maximum amount you want to spend and on which you want to get warned when you reach it.</string>
    <string name="pref_costs_free">Costlimit amount</string>
    <string name="pref_showunits">Show units</string>
    <string name="pref_widget_1x1_oneslot_unitsadded_sum">Only affects One Slot widget</string>
    <string name="pref_widget_statusbarwidget_sum">A widget that integrates in the notification area.</string>
    <string name="pref_widget_use_statusbarwidget">Use Status Bar Widget</string>
    <string name="pref_use1SlotWidget">Use as One-Slot Widget</string>
    <string name="pref_use1SlotWidget_sum">Widget which looks like the bigger widgets and can display limit bars.</string>
    <string name="pref_status_bar_widget">Status Bar Widget</string>
    <string name="pref_status_bar_widget_theme">Widget Theme</string>
    <string name="pref_widget_4x1">Widget 4x1</string>
    <string name="pref_widget_3x1">Widget 3x1</string>
    <string name="pref_widget_2x1">Widget 2x1</string>
    <string name="pref_widget_1x1">Widget 1x1</string>
    <string name="pref_widget_other">Other</string>
    <string name="pref_widget_values">Values</string>
    <string name="pref_widget_transparency">Transparency</string>
    <string name="pref_widget_transparency_sum">Pre Froyo phones can only use certain levels of transparency.</string>
    <string name="pref_useHoursDisplay">Prefer Hours/Minute format</string>
    <string name="pref_useHoursDisplay_sum">Replaces for example 130 min to 2 h 10 min in the detailed stats</string>
    <string name="pref_upateIntervallSMS">Update Interval SMS</string>
    <string name="pref_upateIntervallSMS_sum">"How often DroidStats should check sent and received sms messages. If you don't send much messages raise that value. More calculations needed as for data usage counting. If background services are disabled it only will be checked on application startup."</string>
    <string name="pref_upateIntervallTraffic">Update Interval Data Usage</string>
    <string name="pref_upateIntervallTraffic_sum">How often DroidStats should check interface infos for data usage tracking (affects accuracy)</string>
    <string name="pref_actions">Actions</string>
    <string name="pref_actions_sum">One-time actions like reset the database or do a manual correction</string>
    <string name="pref_manual_correction">Manual Data Correction</string>
    <string name="pref_manual_correction_sum">Are in the middle of the month or upgraded your phone? Maybe you want to set a start amount for your usage. This is NOT for raising your monthly limit.</string>
    <string name="pref_billIncomingCalls">Bill incoming calls</string>
    <string name="pref_billIncomingSMS">Bill incoming SMS</string>
    <string name="pref_billIncomingCalls_sum">If your incoming calls are billed too check this option. If enabled excluded times, numbers and costs are used for incoming calls too</string>
    <string name="pref_billIncomingSMS_sum">If your incoming sms are billed too check this option. If enabled excluded numbers and costs are used for incoming sms too</string>
    <string name="pref_ccc_title">Country Code Correction</string>
    <string name="pref_ccc_sum">Adds your country code to numbers without country code for better stats. Especially if you use free numbers feature this is important.</string>
    <string name="pref_forceEnglish">Force English Language</string>
    <string name="pref_forceEnglish_sum">If you have DroidStats in another language you can choose this option to use it in English</string>
    <string name="pref_free_times">Days and hours - Filter</string>
    <string name="pref_free_times_sum">"Exclude times and days in which your minutes aren't billed (ATM the calls have to begin in this period the be excluded)"</string>
    <string name="general">General</string>
    <string name="data">Data</string>
    <string name="pref_traffic_free_sum">The amount of data traffic you can use every month</string>
    <string name="pref_traffic_free">Free Data</string>
    <string name="pref_traffic_limit_sum">Activate if you have included free (internet) data in your contract.</string>
    <string name="pref_traffic_limit">Data Limit</string>
    <string name="costs">Costs</string>
    <string name="pref_alternativepattern_sum">"Since some providers use '*' as a symbol in their numbers, using @ is an alternative"</string>
    <string name="pref_alternativepattern">Use @ as exclude-pattern symbol</string>
    <string name="sms_tab">SMS</string>
    <string name="calls_tab">Calls</string>
    <string name="pref_limits">Monthly Limits</string>
    <string name="pref_limits_sum">Configure the monthly limits of your contract</string>
    <string name="pref_calltime_limit">Call Time Limit</string>
    <string name="pref_calltime_limit_sum">Activate if you have free minutes in your contract</string>
    <string name="pref_calltime_free">Free Minutes</string>
    <string name="pref_calltime_free_sum">The amount of minutes that are free for you</string>
    <string name="pref_sms_limit">SMS Limit</string>
    <string name="pref_sms_limit_sum">Activate if you have free sms in your contract</string>
    <string name="pref_sms_free">Free SMS</string>
    <string name="pref_sms_free_sum">The amount of sms that are free for you</string>
    <string name="pref_month_beginning">Billing Month Beginning</string>
    <string name="pref_month_beginning_sum">The day your carrier does your monthly billing, e.g. 1</string>
    <string name="pref_billing">Billing</string>
    <string name="pref_billing_sum">Settings for costs, billing, number and time exceptions</string>
    <string name="pref_costs">Cost Settings</string>
    <string name="pref_costs_sum">Set sms, call and data pricing</string>
    <string name="pref_billing_increment">Billing Increment</string>
    <string name="pref_billing_increment_sum">Your contracts billing increment (first period/following periods) in seconds</string>
    <string name="pref_free_call_num">Free Numbers (Calls)</string>
    <string name="pref_free_call_num_sum">Set the numbers you can call for free</string>
    <string name="pref_free_sms_num">Free Numbers (SMS)</string>
    <string name="pref_free_sms_num_sum">Set the numbers you can text free</string>
    <string name="pref_split_sms">Count Long SMS Split</string>
    <string name="pref_split_sms_sum">Count SMS longer 160 chars splitted (Multiple SMS)</string>
    <string name="pref_app">Application Settings</string>
    <string name="pref_app_sum">Settings regarding the Applications</string>
    <string name="pref_estimations">Monthly Usage Estimations</string>
    <string name="pref_estimations_sum">Show estimations for the monthly sms and minutes based on previous days (after one week of billing month)</string>
    <string name="pref_call_notification">Send Call Notifications</string>
    <string name="pref_call_notification_sum">Select to receive status bar notifications when approaching and exceeding your call limit</string>
    <string name="pref_sms_notification">Send SMS Notifications</string>
    <string name="pref_sms_notification_sum">Select to receive status bar notifications when approaching and exceeding your sms limit</string>
    <string name="pref_traffic_notification">Send Data Notifications</string>
    <string name="pref_traffic_notification_sum">Select to receive status bar notifications when approaching and exceeding your data limit</string>
    <string name="pref_unit_notification">Send Unit Notifications</string>
    <string name="pref_unit_notification_sum">Select to receive status bar notifications when approaching and exceeding your units limit</string>
    <string name="pref_costs_notification">Send Costs Notifications</string>
    <string name="pref_costs_notification_sum">Select to receive status bar notifications when approaching and exceeding your costs limit</string>
    <string name="pref_threshold">Warning Threshold</string>
    <string name="pref_threshold_sum">Threshold in percent (%) of when to warn you of reaching your limits. Indicated through notifications (if enabled) and the color of the bars.</string>
    <string name="pref_advanced">Advanced Settings</string>
    <string name="pref_services">Enable Background Services</string>
    <string name="pref_services_sum">"May be disabled to save battery if widgets and notifications aren't used. Also background sms polling won't be done."</string>
    <string name="pref_animaions_off">Disable Animations</string>
    <string name="pref_animaions_off_sum">Makes the app faster on slow devices. (restarts app)</string>
    <string name="pref_reset_db">Reset Database</string>
    <string name="pref_reset_db_sum">Resets the database and rebuilds it out of the call log and sms inbox</string>
    <string name="pref_widget">Widget Settings</string>
    <string name="pref_widget_sum">Customize your widgets</string>
    <string name="pref_widget_micro_stat1">Choose First Stat</string>
    <string name="pref_widget_micro_stat1_sum">The first (upper) stat displayed on the widget</string>
    <string name="pref_widget_micro_stat2">Choose Second Stat</string>
    <string name="pref_widget_micro_stat2_sum">The second (lower) stat displayed on the widget</string>
    <string name="pref_widget_micro_stat3">Choose Third Stat</string>
    <string name="pref_widget_micro_stat4">Choose Forth Stat</string>
</resources>